After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 774851 - glimagesink segfault when specifying GST_GL_WINDOW to something else than x11
glimagesink segfault when specifying GST_GL_WINDOW to something else than x11
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.10.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-11-22 17:36 UTC by Florent Thiéry
Modified: 2016-11-23 06:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GST_DEBUG=gl*:5 debug log (2.54 KB, text/x-log)
2016-11-22 18:23 UTC, Florent Thiéry
Details
gstglconfig.h (1022 bytes, text/x-chdr)
2016-11-22 18:24 UTC, Florent Thiéry
Details

Description Florent Thiéry 2016-11-22 17:36:45 UTC
Works:
GST_GL_PLATFORM=glx GST_GL_WINDOW=x11 gst-launch-1.0 videotestsrc ! glimagesink

GST_GL_PLATFORM=glx GST_GL_WINDOW=whatever gst-launch-1.0 videotestsrc ! glimagesink
(gst-launch-1.0:16437): GLib-GObject-WARNING **: invalid cast from 'GstGLDummyWindow' to 'GstGLWindowX11'
Caught SIGSEGV

0x00007ffff2ee855d in XQueryExtension () from /usr/lib/libX11.so.6
(gdb) bt
  • #0 XQueryExtension
  • #1 glXQueryExtension
  • #2 gst_gl_context_glx_choose_format
    at gstglcontext_glx.c line 322
  • #3 gst_gl_context_create_thread
    at gstglcontext.c line 1192
  • #4 0x00007ffff6a2f0d5 in
  • #5 start_thread
  • #6 clone

Comment 1 Florent Thiéry 2016-11-22 17:40:12 UTC
local/xorg-server 1.18.4-1 (xorg)
gpu is intel 
desktop x86_64
Comment 2 Florent Thiéry 2016-11-22 17:56:20 UTC
Does this mean that dummy window is broken ?
Comment 3 Florent Thiéry 2016-11-22 18:23:27 UTC
Created attachment 340544 [details]
GST_DEBUG=gl*:5 debug log
Comment 4 Florent Thiéry 2016-11-22 18:24:30 UTC
Created attachment 340545 [details]
gstglconfig.h
Comment 5 Matthew Waters (ystreet00) 2016-11-23 06:07:18 UTC
commit 4a0214335fb71b6e85759eb1e391659a3ba60cba
Author: Matthew Waters <matthew@centricular.com>
Date:   Wed Nov 23 17:04:34 2016 +1100

    gl/contextglx: error out on more invalid display/window combinations
    
    https://bugzilla.gnome.org/show_bug.cgi?id=774851

and 1.10 9ab6c561d463b49cb2849cfb577f072b3624fc1c